test/implicitDup23_11.slq

def main(){
	x := H(0);
	y := dup(x);
	z := y;
	if y {}
	x := H(x);
	k := y; /// error
	return x;
}
